<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="@dimen/edit_text_width_layout_create_vocabulary"
            android:hint="@string/text_hind"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="@dimen/image_view_width_delete"
            android:layout_height="@dimen/image_view_width_delete"
            android:src="@mipmap/ic_delete"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_below="@id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_length"
            android:layout_width="@dimen/edit_text_quantity_word_create_vocabulary"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_quantity_word"/>
        <Button
            android:id="@+id/btn_reload_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/button_change"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_center_text"
        android:layout_below="@id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
      <TextView
          android:layout_weight="1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAlignment="textEnd"
          android:paddingRight="20dp"
          android:textStyle="bold"
          android:textColor="@color/bg_green"
          android:text="@string/text_word"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mean"
            android:textColor="@color/bg_yel"
            android:textStyle="bold"
            android:paddingLeft="20dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_vocabulary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_center_text"
        android:layout_above="@id/layout_footer"/>
    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_footer_match_game_height"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_submit"
            android:text="@string/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


</RelativeLayout>