<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_content_match_game"
                style="@style/text_style"/>
            <TextView
                android:id="@id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_content_name" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/image_view_match_game_height"
            android:layout_weight="2"
            android:src="@mipmap/logo_english"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_center_text"
        android:layout_below="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/bg_green"
            android:text="@string/text_word"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mean"
            android:textAlignment="center"
            android:textColor="@color/bg_yel"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_vocabulary"
        android:layout_below="@id/layout_center_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_footer_match_game_height"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_submit"
            android:text="@string/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>