<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_content_height"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_content_main"
            android:textSize="28sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/item_choose_height"
        android:weightSum="2">
        <RelativeLayout
            android:clickable="true"
            android:id="@+id/layout_vocabulary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_yel"
            style="@style/layout_style_item_left">

            <ImageView
                android:id="@+id/btn_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/ic_learn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/item_first"
                style="@style/text_style"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_game1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_red"
            style="@style/layout_style_item_right"
            android:clickable="true">
            <ImageView
                android:id="@+id/btn_game"
                android:src="@drawable/ic_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/item_second"
                style="@style/text_style"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/item_choose_height"
        android:weightSum="2">
        <RelativeLayout
            android:id="@+id/layout_game2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_yel"
            style="@style/layout_style_item_left"
            android:clickable="true">
            <ImageView
                android:src="@drawable/ic_vocabulary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/item_three"
                style="@style/text_style"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_red"
            style="@style/layout_style_item_right">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/item_four"
                style="@style/text_style"/>
        </RelativeLayout>
    </LinearLayout>
    // Layout 3
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/item_choose_height"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_setting_height"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/bg_yel"
            style="@style/layout_style_item_left">
            <ImageView
                android:src="@drawable/ic_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_setting"
                style="@style/text_style"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_red"
            style="@style/layout_style_item_right">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/item_the_last"
                style="@style/text_style"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>